--- a/contracts/builtin/package.json
+++ b/contracts/builtin/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NET=devnet yarn run hardhat test ",
-    "testdev": "NET=devnet yarn run hardhat test test/genesisLock.js",
+    "testdev": "NET=devnet yarn run hardhat test test/addressList.js",
     "clean": "yarn run hardhat clean",
     "compile": "NET=mainnet yarn run hardhat compile",
     "size": "yarn run hardhat size-contracts"
@@ -18,6 +18,7 @@
     "@nomiclabs/hardhat-truffle5": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.0.0",
