--- a/deployment/cross/Makefile
+++ b/deployment/cross/Makefile
@@ -9,7 +9,7 @@ GIT_TIME := $(shell git show -s --pretty=format:%cI)
 GO_PROXY := $(shell go env GOPROXY)
 
 build_linux_node:
-	xgo2 --goproxy="${GO_PROXY}" --targets=linux/amd64 -ldflags "-s -w -X 'main.gitCommit=${BIN_REVISION_STRING}' -X 'main.gitDate=${GIT_TIME}'" -out geth --pkg=${ENTRY_FILE_GETH_DIR} ${PROJECT_ROOT_DIR}
+	xgo2 --goproxy="${GO_PROXY}" --targets=linux/amd64 -ldflags " -X 'main.gitCommit=${BIN_REVISION_STRING}' -X 'main.gitDate=${GIT_TIME}'" -out geth --pkg=${ENTRY_FILE_GETH_DIR} ${PROJECT_ROOT_DIR}
 
 devtools:
 	go get -u github.com/stars-labs/xgo2
@@ -17,7 +17,7 @@ devtools:
 all: docker_bootnode docker_miner
 
 build_linux_bootnode:
-	xgo2 --targets=linux/amd64 -ldflags "-s -w" -out bootnode --pkg=${ENTRY_FILE_BOOTNODE_DIR} ${PROJECT_ROOT_DIR}
+	xgo2 --targets=linux/amd64  -out bootnode --pkg=${ENTRY_FILE_BOOTNODE_DIR} ${PROJECT_ROOT_DIR}
 
 docker_bootnode:build_linux_bootnode
 	docker build -f ./Dockerfile-Bootnode -t ${GROUP_NAME}/${SERVICE_NAME_BOOTNODE}:${BIN_REVISION_STRING} .
