--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,11 @@
 	path = tests/testdata
 	url = https://github.com/ethereum/tests
 	shallow = true
+[submodule "crosschain/cosmos/cosmos-sdk"]
+	path = crosschain/cosmos/cosmos-sdk
+	url = git@github.com:cube-network/cosmos-sdk.git
+	branch = feature_cube_support
+[submodule "crosschain/cosmos/ibc"]
+	path = crosschain/cosmos/ibc
+	url = git@github.com:cube-network/ibc.git
+	branch = feature_cube_support
